--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,15 +3,15 @@ run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 jobs:
   build-node:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-        - name: Install dependencies
-          run: npm install
-        
-        - name: Start App
-          run: npm start &
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Start App
+        run: npm start &
