--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,6 +1,11 @@
 name: learn-github-actions
+
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+
+on: 
+  push:
+  workflow_dispatch:
+
 jobs:
   build-node:
     runs-on: self-hosted
