--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,8 +10,10 @@ jobs:
   build-node:
     runs-on: self-hosted
     steps:
-      -
-        name: Build and push
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v3.0.0
+      
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           push: false
