--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -20,7 +20,7 @@ jobs:
           tags: user/app:latest
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v2.0.1
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
