--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,7 +10,7 @@ jobs:
   build-node:
     runs-on: self-hosted
     steps:
-      - name: checkout sonarqube
+      - name: checkout repository
         uses: actions/checkout@v4
 
       - name: Build and push
@@ -24,7 +24,8 @@ jobs:
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          #password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.CTW_PASSWORD }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
