--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,46 +7,104 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-node:
-    runs-on: self-hosted
-    steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
+  # build-node:
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Build and push
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         push: false
+  #         tags: user/app:latest
+
+
+
+
+    #  - name: SonarQube Scan
+    #    uses: sonarsource/sonarqube-scan-action@master
+    #    env:
+    #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+
+
+  deploy_to_development:
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      # Add steps for deployment to development environment
+      - name: Deploy to Development
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          tags: user/app:latest
+      - name: Print Environment
+        run: echo "Deploying to ${{ steps.set_env.outputs.environment }}"
+
+  deploy_to_integration:
+    runs-on: ubuntu-latest
+    environment: int
+    needs: deploy_to_development
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      # Add steps for deployment to staging environment
+      - name: Deploy to Staging
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          tags: user/app:latest
+      - name: Print Environment
+        run: echo "Deploying to ${{ steps.set_env.outputs.environment }}"
+
+  deploy_to_production:
+    runs-on: ubuntu-latest
+    environment: prod
+    # needs: deploy_to_integration
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      # Add steps for deployment to production environment
+      - name: Deploy to Production
         uses: docker/build-push-action@v5
         with:
           push: false
           tags: user/app:latest
 
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          #password: ${{ secrets.DOCKER_PASSWORD }}
-          password: ${{ secrets.CTW_PASSWORD }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: my-docker-hub-namespace/my-docker-hub-repository
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Print Environment
+        run: echo "Deploying to ${{ steps.set_env.outputs.environment }}"
 
 
 
-#      - name: SonarQube Scan
-#        uses: sonarsource/sonarqube-scan-action@master
-#        env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     #password: ${{ secrets.CTW_PASSWORD }}
+
+      # - name: Extract metadata (tags, labels) for Docker
+      #   id: meta
+      #   uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+      #   with:
+      #     images: my-docker-hub-namespace/my-docker-hub-repository
+
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
+
+
+
       
