--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -94,6 +94,12 @@ jobs:
       - name: Print Environment
         run: echo "Deploying to ${{ steps.set_env.outputs.environment }}"
 
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+
 
 
       # - name: Log in to Docker Hub
@@ -102,6 +108,7 @@ jobs:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
       #     #password: ${{ secrets.CTW_PASSWORD }}
+      
 
       # - name: Extract metadata (tags, labels) for Docker
       #   id: meta
